Lots of updates: Function and Arrays

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li><a href="pages/overview/runtime-and-engine.html">Runtime and Engine</a></li>
                     <li><a href="pages/overview/code-execution.html">Code Execution</a></li>
                     <li><a href="pages/overview/scope-chain.html">Scope Chain</a></li>
-                    <li><a href="pages/overview/primatives.html">Primatives</a></li>
+                    <li><a href="pages/overview/primatives.html">Primatives</a> - Objects and Functions</li>
                 </ul>
             </ul>
         </nav>
@@ -149,6 +149,19 @@
         </nav>
 
 
+        <p class="toc-heading2">Data Structures</p>
+        <nav>
+            <ul class="main-nav">
+                <ul class="sub-nav">
+                  <li><a href="pages/data-structures/overview.html">Overview</a></li>
+                   <li><a href="pages/data-structures/sets.html">Sets</a></li>
+                    <li><a href="pages/data-structures/maps.html">Maps</a></li>                 
+
+                </ul>
+            </ul>
+        </nav>
+
+
 
 
 
@@ -175,9 +188,11 @@
                     <li><a href="pages/basics/string-methods-search.html">search</a> - indexOf(), search(), </li>
                     <li><a href="pages/basics/string-methods-extract.html">extract</a> - substring(), substr(), slice(), </li>
                     <li><a href="pages/basics/string-methods-replace.html">replace</a> - replace()</li>
-                    <li><a href="pages/basics/string-methods-altering.html">altering</a> - charAt(), toUpperCase(), toLowerCase(), concat(), trim(), includes()</li>
+                    <li><a href="pages/basics/string-methods-altering.html">altering</a> - charAt(), toUpperCase(), toLowerCase(), concat(), trim(), includes(), startsWith(), endsWith()</li>
                     <li><a href="pages/basics/string-methods-convert-to-array.html">convert to array</a> - split()</li>
                     <li><a href="pages/basics/string-methods-property-access.html">Property access</a></li>
+                    <li><a href="pages/basics/string-methods-padding.html">Padding</a></li>
+                    <li><a href="pages/basics/string-methods-repeat.html">repeat</a></li>
 
                 </ul>
             </ul>
@@ -283,7 +298,7 @@
                 <ul class="sub-nav">
 
                     <li><a href="pages/functions/basic-functions.html">Basic Functions</a> - Parameters, Declaring, return, execution order</li>
-                    <li><a href="pages/functions/function-types.html">Types of functions</a> - Named, Anonymous, Immediately Invoked
+                    <li><a href="pages/functions/function-types.html">Types of functions</a> - Named, Anonymous, Immediately Invoked, First class, higher order
                     </li>
                     <ul>
                         <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
@@ -291,6 +306,11 @@
                     <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
                     <li><a href="pages/functions/arrow-functions.html">Arrow Functions</a></li>
                     <li><a href="pages/functions/functions-calling-other-functions.html">Functions calling other functions</a>
+                      
+                    <li><a href="pages/functions/callback-functions.html">Callback functions</a>
+                         
+                    <li><a href="pages/functions/functions-returning-functions.html">Functions returning Functions</a>
+                      <li><a href="pages/functions/call-and-apply-methods.html">Call and APply methods</a>
                     </li>
 
                 </ul>
@@ -360,6 +380,7 @@
                     <li><a href="pages/arrays/array-indexOf.html">indexOf()</a> - returns index of an element </li>
                     <li><a href="pages/arrays/array-map.html">map()</a> - creates a new array by performing a function on each array element</li>
                     <li><a href="pages/arrays/array-filter.html">filter()</a> - creates a new array, but only with elements that pass a specific test in the function</li>
+                    <li><a href="pages/arrays/array-reduce.html">reduce()</a></li>
                     <li><a href="pages/arrays/array-every.html">every()</a> - check if all array values pass a test</li>
                     <li><a href="pages/arrays/array-some.html">some()</a> - check if any array values pass a test</li>
                     <li><a href="pages/arrays/array-lastindexof.html">lastIndexOf()</a> - does the same as indexOf(), but searches from the end.</li>
@@ -376,7 +397,7 @@
                     <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a> - join(), toString(), split()</li>
                     <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a> - sort(), Math.max(), Math.min()
                     </li>
-                    <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a> - reverse()</li>
+                    <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a> - concat(), reverse()</li>
                 </ul>
 
                 <h5>Types of Arrays</h5>
