--- a/pages/basics/string-methods-search.html
+++ b/pages/basics/string-methods-search.html
@@ -45,6 +45,7 @@
             <div class="col-6">
                 <p>Use indexOf() to search for a sub-string within a string.</p>
                 <p>It returns the position of a first occurence of a substring or -1 if nothing found.</p>
+                <p>This is Case Sensitive.</p>
                 <p>This example returns the following:</p>
                 <ul>
                     <li>returns 0</li>
