--- a/pages/basics/string-methods.html
+++ b/pages/basics/string-methods.html
@@ -21,6 +21,9 @@
         <div class="row">
             <div class="col">
                 <p>With JavaScript, methods and properties are available to primitive values, because JavaScript treats primitive values as objects when executing methods and properties.</p>
+                <p>When the operation is complete, the Object is converted back into a primative.</p>
+                <p>This is why all string methods return primatives, even when called on a String Object</p>
+                <p>This process is called Boxing.</p>
             </div>
         </div>
 
