--- a/pages/functions/function-types.html
+++ b/pages/functions/function-types.html
@@ -86,6 +86,39 @@ divided();</span></pre>
 } () )</span></pre>
             </div>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+        <h2>First Class functions (concept)</h2>
+        <div class="row">
+            <div class="col">
+                <p>First Class Functions means Functions are treated as values.</p>
+                <p>Functions are Objects in JavaScript and Objects are values.</p>
+                <p>Since they are values, you can do things like store them in variables or Object properties.</p>
+            </div>
+        </div>
+
+
+
+        <h2>Higher Order functions (specific functions)</h2>
+        <div class="row">
+            <div class="col">
+                <p>First Class Functions allow Higher-Order Functions.</p>
+                <p>A function that receives another function as an argument</p>
+                <p>Or a function that returns a new function.</p>
+            </div>
+            <img src="../../_img/first-class-higher-order-functions.png" width="900px">
+        </div>
+
     </section>
     <!-- End collapse section -->
     </div>
