--- a/pages/arrays/array-foreach.html
+++ b/pages/arrays/array-foreach.html
@@ -2,47 +2,59 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="../../_css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../../_css/style.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" type="text/css" href="../../_css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="../../_css/style.css">
 
-    <title>Array Iteration</title>
+  <title>Array Iteration</title>
 </head>
 
 <body>
-    <a href="../../index.html">Home page</a>
+  <a href="../../index.html">Home page</a>
 
 
 
 
 
-    <section class="container">
-        <h1>forEach()</h1>
-        <h3>Print only the values</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>The forEach() method calls a function (a callback function) once for each array element.</p>
-                <p>A callback function is that gets passed into another function.</p>
+  <section class="container">
+    <h1>forEach()</h1>
 
-                <p>The function takes 3 arguments:</p>
-                <ul>
-                    <li>The item value</li>
-                    <li>The item index</li>
-                    <li>The array itself</li>
-                </ul>
-                <p>syntax: <span class="standout">arrayName.forEach(functionName)</span></p>
-                <p>This example uses only the value parameter since that is what is specifically typed out.</p>
-                <p>Notice the callback function is called within the forEach() API. You do not call the callback function directly.</p>
+    <div class="row">
+      <div class="col">
+        <p>The forEach() loop loops over the entire Array.</p>
+        <p>You cannot break out of a forEach() loop.</p>
+        <p>This means the continue and break statements will not work.</p>
+        <p>If you need to break out of a loop, you must use the for of loop.</p>
 
-                <p><span class="red">Why does txt need to be before 'value' when outputting?</span></p>
+      </div>
+    </diV>
 
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var txt = "";
+    <h3>Print only the values</h3>
+    <div class="row">
+      <div class="col-6">
+        <p>The forEach() method calls a function (a callback function) once for each array element.</p>
+        <p>A callback function is that gets passed into another function.</p>
+
+        <p>The function takes 3 arguments:</p>
+        <ul>
+          <li>The item value</li>
+          <li>The item index</li>
+          <li>The array itself</li>
+        </ul>
+        <p>syntax: <span class="standout">arrayName.forEach(functionName)</span></p>
+        <p>This example uses only the value parameter since that is what is specifically typed out.</p>
+        <p>Notice the callback function is called within the forEach() API. You do not call the callback function
+          directly.</p>
+
+        <p><span class="red">Why does txt need to be before 'value' when outputting?</span></p>
+
+      </div>
+      <div class="col-6">
+        <pre class="example"><span class="code-js">var txt = "";
 var numbers = [45, 4, 9, 16, 25];
 
 <span class="code-comment">//call the function myFunction() once for each element using forEach()
@@ -57,34 +69,35 @@ function myFunction(value, index, array) {
   //txt is necessary before the value, otherwise only the last element would be displayed</span>
   txt = txt + value + "&lt;br&gt;";
 }</span></pre>
-            </div>
-        </div>
+      </div>
+    </div>
 
 
-        <h5>Output</h5>
-        <div class="row">
-            <div class="col-6">
+    <h5>Output</h5>
+    <div class="row">
+      <div class="col-6">
 
-                <p class="code-output">This example outputs: 45, 4, 9, 16, 25</p>
-            </div>
+        <p class="code-output">This example outputs: 45, 4, 9, 16, 25</p>
+      </div>
 
-            <div class="col-6">
-                <pre class="example"><span class="code-output">45
+      <div class="col-6">
+        <pre class="example"><span class="code-output">45
 4
 9
 16
 25</span></pre>
-            </div>
-        </div>
+      </div>
+    </div>
 
 
-        <div class="row">
-            <div class="col-6">
-                <p>Since only the 'value' is specifically printed, you could rewrite the function to remove 'index' and 'array'.</p>
+    <div class="row">
+      <div class="col-6">
+        <p>Since only the 'value' is specifically printed, you could rewrite the function to remove 'index' and 'array'.
+        </p>
 
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var txt = "";
+      </div>
+      <div class="col-6">
+        <pre class="example"><span class="code-js">var txt = "";
 var numbers = [45, 4, 9, 16, 25];
 
 <span class="code-comment">//call the function myFunction() once for each element using forEach()
@@ -99,23 +112,23 @@ function myFunction(value) {
   //txt is necessary before the value, otherwise only the last element would be displayed</span>
 txt = txt + value + "&lt;br&gt;";
 }</span></pre>
-            </div>
-        </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
 
 
 
 
-    <section class="container">
-        <h3>Print the values and index</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>This does the same as above, but it also prints out the index#.</p>
-                <p>You just need to specify it within the function output.</p>
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var txt = "";
+  <section class="container">
+    <h3>Print the values and index</h3>
+    <div class="row">
+      <div class="col-6">
+        <p>This does the same as above, but it also prints out the index#.</p>
+        <p>You just need to specify it within the function output.</p>
+      </div>
+      <div class="col-6">
+        <pre class="example"><span class="code-js">var txt = "";
 var numbers = [45, 4, 9, 16, 25];
 
 numbers.forEach(myFunction);
@@ -125,36 +138,36 @@ document.getElementById("demo").innerHTML = txt;
 function myFunction(value, index, array) {
   txt = txt + "Value is: " + value + " Index is: " + <span class="standout">index</span> + "&lt;br&gt;";
 }</span></pre>
-            </div>
-        </div>
+      </div>
+    </div>
 
 
-        <h5>Output</h5>
-        <div class="row">
-            <div class="col-6">
+    <h5>Output</h5>
+    <div class="row">
+      <div class="col-6">
 
-                <p class="code-output">This example outputs:</p>
-            </div>
+        <p class="code-output">This example outputs:</p>
+      </div>
 
-            <div class="col-6">
-                <pre class="example"><span class="code-output">Value is: 45 Index is: 0
+      <div class="col-6">
+        <pre class="example"><span class="code-output">Value is: 45 Index is: 0
 Value is: 4 Index is: 1
 Value is: 9 Index is: 2
 Value is: 16 Index is: 3
 Value is: 25 Index is: 4</span></pre>
-            </div>
-        </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
 
-    <section class="container">
-        <h3>Print the values, index, and array</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>This does the same as above, but it also prints out the full array.</p>
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var txt = "";
+  <section class="container">
+    <h3>Print the values, index, and array</h3>
+    <div class="row">
+      <div class="col-6">
+        <p>This does the same as above, but it also prints out the full array.</p>
+      </div>
+      <div class="col-6">
+        <pre class="example"><span class="code-js">var txt = "";
 var numbers = [45, 4, 9, 16, 25];
 
 numbers.forEach(myFunction);
@@ -164,26 +177,25 @@ document.getElementById("demo").innerHTML = txt;
 function myFunction(value, index, array) {
 txt = txt + "Value is: " + value + " Index is: " + index + " Array is: " + array + "&lt;br&gt;";
 }</span></pre>
-            </div>
-        </div>
+      </div>
+    </div>
 
 
-        <h5>Output</h5>
-        <div class="row">
-            <div class="col-6">
+    <h5>Output</h5>
+    <div class="row">
+      <div class="col-6">
 
-                <p class="code-output">This example outputs:</p>
-            </div>
+        <p class="code-output">This example outputs:</p>
+      </div>
 
-            <div class="col-6">
-                <pre class="example"><span class="code-output">Value is: 45 Index is: 0 Array is: 45,4,9,16,25
+      <div class="col-6">
+        <pre class="example"><span class="code-output">Value is: 45 Index is: 0 Array is: 45,4,9,16,25
 Value is: 4 Index is: 1 Array is: 45,4,9,16,25
 Value is: 9 Index is: 2 Array is: 45,4,9,16,25
 Value is: 16 Index is: 3 Array is: 45,4,9,16,25
 Value is: 25 Index is: 4 Array is: 45,4,9,16,25</span></pre>
-            </div>
-        </div>
-    </section>
+      </div>
+    </div>
 
 
 
@@ -195,9 +207,67 @@ Value is: 25 Index is: 4 Array is: 45,4,9,16,25</span></pre>
 
 
 
-    </section>
-    <script src="../../_js/jquery.js"></script>
-    <script src="../../_js/bootstrap.bundle.js"></script>
+    <h1>Maps and Sets</h1>
+
+    <h2>Maps</h2>
+    <div class="row">
+      <div class="col-6">
+        <p>Very similar to forEach() on an Array. </p>
+        <p>Uses value, key, and map</p>
+      </div>
+
+      <div class="col-6">
+        <pre class="example"><span class="code-js">const currencies = new Map([
+  ['USD', 'United States dollar'],
+  ['EUR', 'Euro'],
+  ['GBP', 'Pound sterling'],
+]);
+
+currencies.forEach(function(value, key, map){
+  console.log(`${key}: ${value}`);
+});
+</span></pre>
+      </div>
+    </div>
+
+
+
+
+
+    <h2>Set</h2>
+    <div class="row">
+      <div class="col-6">
+        <p>Very similar to forEach() on an Array. </p>
+        <p>Does not use a key since Sets do not have unique values.</p>
+        <p>So only a value and map</p>
+      </div>
+
+      <div class="col-6">
+<pre class="example"><span class="code-js">const currenciesUnique = new Set(['USD', 'GBP', 'USD', 'EUR', 'EUR']);
+
+currenciesUnique.forEach(function (value, _, map) {
+console.log(`${value}`);
+});</span></pre>
+      </div>
+    </div>
+  </section>
+
+
+
+  <script>
+    'use strict'
+
+    const currenciesUnique = new Set(['USD', 'GBP', 'USD', 'EUR', 'EUR']);
+
+   
+    currenciesUnique.forEach(function (value, _, map) {
+      console.log(`${value}`);
+    });
+
+
+
+
+  </script>
 </body>
 
 </html>
