--- a/pages/functions/basic-functions.html
+++ b/pages/functions/basic-functions.html
@@ -232,6 +232,37 @@ console.log(scoreText)</span></pre>
 
 
 
+
+        
+        <h3>(ES6) Setting default values for parameters</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>ES6 way to create default params</p>
+                <p>You can also use math like 199 * 2 for the default value.</p>
+                <p>You can also use other params: 199 * numPassengers, but the other variable must already be written first in the code.</p>
+                <p>You can't skip a param either. If you want to skip, just set as undefined: <strong>createBooking('LH123', undefined, 1000)</strong>. setting to undefined is like not even setting it.</p>
+            </div>
+
+            <div class="col-6">
+<pre class="example"><span class="code-js">const bookings = [];
+
+const createBooking = function (flightNum, numPassengers = 1, price = 199) {
+
+  const booking = {
+    flightNum,
+    numPassengers,
+    price,
+  };
+
+  console.log(booking);
+  bookings.push(booking);
+};
+
+createBooking('LH123');</span></pre>
+</div>
+        </div>
+
+
     </section>
 
 
@@ -479,14 +510,23 @@ function sayHi(name) {
 
 
 
+<script>
+const bookings = [];
 
+const createBooking = function (flightNum, numPassengers = 1, price = 199) {
 
+  const booking = {
+    flightNum,
+    numPassengers,
+    price,
+  };
 
+  console.log(booking);
+  bookings.push(booking);
+};
 
-
-
-    <script src="../../_js/jquery.js"></script>
-    <script src="../../_js/bootstrap.bundle.js"></script>
+createBooking('LH123');
+  </script>
 </body>
 
 </html>
